# dhg503-project

./: .gitignore  Dockerfile.db  README.md  check-customers.sh  config.yaml  config_schema.json  docker-compose.yaml  init.sql  pyproject.toml  requirements.txt  setup_python.sh  tutorial.sql
notebook/: crawl.py  crawling.ipynb  crawling_practice.ipynb
scripts/: crawl.py
src/crawler/spiders/: BaseCrawler.py  HTMLCrawler.py  ImageExtractor.py  TextExtractor.py  UrlExtractor.py
src/crawler/utils/: clean_html.py  files.py  url.py
src/utils/: config.py  logging.py
xpath_finder/: LICENSE  README.md  background.js  content.css  content.js  manifest.json  popup.html  popup.js  react-implementation.md
